--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bcrypt": "^5.0.1",
     "bootstrap-icons": "^1.9.1",
     "mongoose": "^6.6.2",
+    "mongoose-bcrypt": "^1.10.0",
     "next": "12.3.1",
     "next-auth": "^4.12.0",
     "nodemailer": "^6.7.8",
