--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bcrypt": "^5.0.1",
     "bootstrap-icons": "^1.9.1",
+    "cloudinary": "^1.32.0",
     "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-auth": "^4.12.2",
+    "next-connect": "^0.13.0",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
