--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "bootstrap-icons": "^1.9.1",
     "cloudinary": "^1.32.0",
+    "cookies-next": "^2.1.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
